tests/rosetta/out/Java/binary-digits.java
// Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
// binary-digits.mochi
public class BinaryDigits {
    static String toBin(int n) {
        if (n == 0) {
            return "0";
        }
        String bits = "";
        int x = n;
        while (x > 0) {
            bits = String.valueOf(x % 2) + bits;
            x = (int)(Integer.parseInt((x / 2)));
        }
        return bits;
    }
    public static void main(String[] args) {
        for (int i = 0; i < 16; i++) {
            System.out.println(toBin(i));
        }
    }
}
